using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationParameters
{
    public const string ISGROUNDED = "isGrounded";
    public const string ISJUMPING = "isJumping";
    public const string ISDOUBLEJUMPING = "isDoubleJumping";
    public const string ISWALKING = "isWalking";
    public const string ISFALLING = "isFalling";
    public const string VELOCITY = "Velocity";
    public const string ATTACK = "isAttacking";
    public const string DASH = "isDashing";
    public const string HANGING = "isHanging";
    public const string CLIMBING = "isClimbing";
    public const string CLIMBDOWN = "ClimbDown";
}
